# teleforward

./: .env.example  .gitignore  LICENSE  README.md  config.py  env_paths.py  main.py  pyproject.toml  requirements.txt
changelog/planned/: CHANGELOG.md
changelog/planned/docs/: LEGACY_RETIREMENT_DECISION.md  PLAN_V2_MULTI_DESTINATION.md  USER_FLOW_ENV_AND_V2.md
core/: discord_dispatcher.py  discord_sender.py  forwarder.py  telegram_client.py  telegram_sender.py  transformer.py
database/: db.py  models.py
deploy/systemd/: teleforward.env.example  teleforward.service
docs/: INSTALL_UBUNTU_VPS.md  LLM_AGENT_GUIDE.md
scripts/: local_setup.ps1  local_setup.sh  vps_install_ubuntu.sh  vps_update_ubuntu.sh
tui/: app.py
