[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleforward"
version = "2.0.0"
description = "Secure Telegram forwarder to Discord and Telegram with a Rich TUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "telethon>=1.34.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.19.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "anyio>=4.0.0",
  "rich>=13.7.0",
]

[project.scripts]
teleforward = "main:main"

[tool.setuptools]
py-modules = ["main", "config"]
packages = ["core", "database", "tui"]
